Update and get controller

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 MONGOURI = "mongodb://localhost:27017"
+# Email verification 
+Email = "velus515@gmial.com"
+Password = "velu19951995@1"
+
+# Frontend URL
+FRONTEND_URI = "http://localhost:8080"
